@@ -502,6 +502,16 @@ struct transformValues_ {
 	
 	if( newBlend )
 		glBlendFunc(CC_BLEND_SRC, CC_BLEND_DST);
+	
+#if CC_SPRITE_DEBUG_DRAW
+	CGSize s = [self contentSize];
+	CGPoint vertices[4]={
+		ccp(0,0),ccp(s.width,0),
+		ccp(s.width,s.height),ccp(0,s.height),
+	};
+	ccDrawPoly(vertices, 4, YES);
+#endif // CC_TEXTURENODE_DEBUG_DRAW
+	
 }
 
 #pragma mark CCSprite - CCNode overrides
